--- a/static/css/file.css
+++ b/static/css/file.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    width: 100%;
+    width: calc(100% - 10px);
     border-radius: 5px;
     background: transparent;
     box-sizing: border-box;
